Update profile section and add new project entry
Improved the profile section by correcting text, updating button labels, and adding a new Blog button. Added 'Bangla Quran Windows App' to the projects.json data file.

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -123,5 +123,13 @@
     "image": "/imgs/trakt.png",
     "sourceCode": "https://github.com/abusayed0206/trakt",
     "livePreview": "https://trakt.sayed.app/"
+  },
+    {
+    "id": 14,
+    "academic": false,
+    "name": "Bangla Quran Windows App",
+    "description": "Flutter based windows app for listening quran in Bangla. Nothing else!",
+    "keywords": ["bangla", "quran"],
+    "livePreview": "https://apps.microsoft.com/detail/9n3gsz7v18zp?hl=en-US&gl=GD"
   }
 ]
