Redesign projects and home pages, simplify UI
Refactored the home and projects pages to use a simpler, more indie-style layout with a single-column design, removed filters and pagination, and improved project sorting (pinned first). Updated the header and footer for a more minimal, text-based navigation and link style. Removed DaisyUI and related custom CSS, and made minor accessibility and style improvements to the redirect page. Updated dependencies and removed DaisyUI from the project.

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,29 +1,7 @@
 [
   {
     "id": 1,
-    "academic": true,
-    "name": "Engineering Classification of Soil | Sughandha R/A, Chittagong",
-    "description": "As part of our geotechnical engineering course (CE 332), we had the opportunity to undertake a significant lab project under the guidance of CUET professors and the Civil Engineering Department.",
-    "keywords": ["geotech", "civil-engineering", "academic"],
-    "slug": "engineering-classification-of-soil-sughandha-ra-chittagong",
-    "image": "/imgs/cuet_logo.png",
-    "sourceCode": "https://sayed.blog/engineering-classification-of-soil-sughandha-ra-chittagong",
-    "livePreview": "https://public.sayed.page/webdav/articles/CE-332%20Project.pdf"
-  },
-  {
-    "id": 2,
-    "academic": true,
-    "name": "Structural Design and Analysis of a Residential Building",
-    "description": "According to the Bangladesh National Building Code (BNBC 2020), this project is for a 10-storied residential building situated on a 14,400 square-foot plot.",
-    "keywords": ["structure", "civil-engineering", "academic", "design"],
-    "slug": "structural-design-and-analysis-of-a-residential-building-at-pinkcity-raozan-chittagong-bangladesh",
-    "image": "/imgs/cuet_logo.png",
-    "sourceCode": "https://sayed.blog/structural-design-and-analysis-of-a-residential-building-at-pinkcity-raozan-chittagong-bangladesh",
-    "livePreview": ""
-  },
-  {
-    "id": 3,
-    "academic": false,
+    "pin": false,
     "name": "CUET Students Directory",
     "description": "Student Information: Access detailed profiles including student ID, name, department, and more. Department Statistics: Get total student counts by batch for each department.",
     "keywords": ["nextjs", "typescript", "react", "supabase", "web-app"],
@@ -33,8 +11,8 @@
     "livePreview": "https://cuet.sayed.app/"
   },
   {
-    "id": 4,
-    "academic": false,
+    "id": 2,
+    "pin": false,
     "name": "Bangla movies/series TMDB Wrapper",
     "description": "A website to browse latest Bangla movies and series. It provides a user-friendly interface to search and access various Bangla movies and series.",
     "keywords": ["nextjs", "typescript", "react", "api", "movies"],
@@ -44,8 +22,8 @@
     "livePreview": "https://movies.sayed.app/"
   },
   {
-    "id": 5,
-    "academic": false,
+    "id": 3,
+    "pin": true,
     "name": "Laws of Bangladesh",
     "description": "A website to browse the laws of Bangladesh. It provides a user-friendly interface to search and access various legal documents and acts.",
     "keywords": ["scraping", "documentation", "web-app", "laws"],
@@ -55,8 +33,8 @@
     "livePreview": "https://laws.sayed.app/"
   },
   {
-    "id": 6,
-    "academic": false,
+    "id": 4,
+    "pin": false,
     "name": "Telegraph CMS",
     "description": "Use Telegram's Telegraph platform as a CMS/blogging tool for your site! 🚀",
     "keywords": ["nextjs", "typescript", "react", "cms", "api"],
@@ -66,8 +44,8 @@
     "livePreview": "https://telegraphcms.sayed.app/"
   },
   {
-    "id": 7,
-    "academic": false,
+    "id": 5,
+    "pin": false,
     "name": "Digitalized Bangla Films updating on IMDB and TMDB",
     "description": "A project to update/add old Bangla films on IMDB and TMDB.",
     "keywords": ["csv", "imdb", "tmdb", "bangla-films", "data"],
@@ -76,19 +54,8 @@
     "sourceCode": "https://github.com/abusayed0206/banglafilm"
   },
   {
-    "id": 8,
-    "academic": true,
-    "name": "[UG Thesis] Vertical Extension of Civil Engineering Building",
-    "description": "This project focuses on the vertical extension of the Civil Engineering Building at CUET, which is a 3 story building and built in 1968.",
-    "keywords": ["structure", "seismic-evaluation", "BSPP"],
-    "slug": "vertical-extension-of-civil-engineering-building",
-    "image": "/imgs/verctical_project.png",
-    "sourceCode": "https://sayed.blog/vertical-extension-of-civil-engineering-building",
-    "livePreview": ""
-  },
-  {
-    "id": 9,
-    "academic": false,
+    "id": 6,
+    "pin": false,
     "name": "Bangla Quran Audio",
     "description": "A website to listen to Bangla Quran audio. It provides a user-friendly interface to listen to the Quran in Bangla language.",
     "keywords": ["quran", "nextjs", "react", "audio", "quran"],
@@ -97,8 +64,8 @@
     "livePreview": "https://quran.sayed.app"
   },
   {
-    "id": 10,
-    "academic": false,
+    "id": 7,
+    "pin": false,
     "name": "Film Page screenshot from Letterboxd",
     "description": "A poster style screenshot of a RSS film page from Letterboxd. Updated with the latest film data daily.",
     "keywords": ["film", "letterboxd", "rss", "screenshot"],
@@ -107,8 +74,8 @@
     "livePreview": "https://letterboxd.sayed.app/film.jpg"
   },
   {
-    "id": 11,
-    "academic": false,
+    "id": 8,
+    "pin": false,
     "name": "RDAPclient",
     "description": "A client for the RDAP (Registration Data Access Protocol) API and webapp",
     "keywords": ["rdap", "api", "client"],
@@ -117,8 +84,8 @@
     "livePreview": "https://rdap.sayed.app/"
   },
   {
-    "id": 12,
-    "academic": false,
+    "id": 9,
+    "pin": false,
     "name": "Yearbook",
     "description": "A yearbook website for me . It contains all of my classmates names,ID/roll from schools, college and university.",
     "keywords": ["yearbook", "classmates", "school", "college", "university"],
@@ -127,8 +94,8 @@
     "livePreview": "https://yearbook.sayed.app/"
   },
   {
-    "id": 13,
-    "academic": false,
+    "id": 10,
+    "pin": true,
     "name": "Trakt Web Dashboard",
     "description": "A web dashboard for Trakt, a platform for showcasing TV shows and movies.",
     "keywords": ["trakt", "dashboard", "web-app", "movies", "tv-shows"],
@@ -138,8 +105,8 @@
     "livePreview": "https://trakt.sayed.app/"
   },
   {
-    "id": 14,
-    "academic": false,
+    "id": 11,
+    "pin": false,
     "name": "Bangla Quran Windows App",
     "description": "Flutter based windows app for listening quran in Bangla. Nothing else!",
     "keywords": ["bangla", "quran"],
@@ -147,11 +114,11 @@
     "livePreview": "https://apps.microsoft.com/detail/9n3gsz7v18zp?hl=en-US&gl=GD"
   },
   {
-    "id": 15,
-    "academic": false,
+    "id": 12,
+    "pin": true,
     "name": "Bsky Tools AIO",
     "description": "An all-in-one toolkit for Bluesky social network users, featuring profile download profile, did to handle, handle to did, and more.",
-    "keywords": ["bluesky","atproto", "aio", "tools", "social-network"],
+    "keywords": ["bluesky", "atproto", "aio", "tools", "social-network"],
     "slug": "bsky-tools-aio",
     "livePreview": "https://bsky.sayed.app/"
   }
