Add PDPO Helper project page and metadata
Introduced a new project, 'Personal Data Protection Ordinance, 2025 (PDPO) helper', including its metadata and a detailed project page. Updated projects.json to list the new PDPO Helper project with relevant details and live preview link.

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -121,5 +121,14 @@
     "keywords": ["bluesky", "atproto", "aio", "tools", "social-network"],
     "slug": "bsky-tools-aio",
     "livePreview": "https://bsky.sayed.app/"
+  },
+  {
+    "id": 13,
+    "pin": true,
+    "name": "Personal Data Protection Ordinance, 2025 (PDPO) helper",
+    "description": "A web application to make email for sending to data fiduciary to complying with the Personal Data Protection Ordinance, 2025 (PDPO).",
+    "keywords": ["pdpo", "data-protection", "compliance", "web-app"],
+    "slug": "pdpo",
+    "livePreview": "https://pdpo.sayed.app/"
   }
 ]
